--- a/managment-backend/WebMag/appsettings.json
+++ b/managment-backend/WebMag/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "authConnection": "Data Source=localhost,1433;Initial Catalog=dev_auth;User ID=sa;Password=Password_123#;TrustServerCertificate=true",
-    "domainConnection": "Data Source=localhost,1433;Initial Catalog=dev_db;User ID=sa;Password=Password_123#;TrustServerCertificate=true"
+    "authConnection": "Server=tcp:dev-uni.database.windows.net,1433;Initial Catalog=dev_auth;Persist Security Info=False;User ID=dev;Password=Kasra2kasra$@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "domainConnection": "Server=tcp:dev-uni.database.windows.net,1433;Initial Catalog=dev_db;Persist Security Info=False;User ID=dev;Password=Kasra2kasra$@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -16,6 +16,4 @@
     "Audience": "SecureApiUser",
     "DurationInMinutes": 1
   }
-
-
 }
